<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Consumer VPN</string>
    <string name="app_logo">Consumer VPN logo</string>
    <string name="generic_button_confirm">Confirm</string>
    <string name="generic_button_cancel">Cancel</string>

    <!-- Login -->
    <string name="hint_login_username">Username or Email</string>
    <string name="hint_login_password">Password</string>
    <string name="btn_login_forgot_password">Forgot password?</string>
    <string name="btn_login_log_in">Log in</string>
    <string name="title_login_sing_up">Don\'t have an account?</string>
    <string name="btn_login_sign_up">Sign up</string>

    <!--  Errors -->
    <string name="error_unknown_error">Unknown Error</string>
    <string name="error_vpn_connection">Error connecting to the VPN, please try again later</string>
    <string name="error_no_connection">No Connection</string>
    <string name="error_links_not_supported">Opening web links is not supported on this device.</string>
    <string name="error_login_username_password_invalid">Invalid credentials, please try again</string>
    <string name="error_not_authenticated_user">User must be authenticated in order to execute the operation</string>

    <!-- Notifications -->
    <!-- VPN -->
    <string name="notification_vpn_connection_channel_title">Connection</string>
    <string name="notification_vpn_connecting_content">%1$s/s %2$s - %3$s/s %4$s</string>
    <string name="notification_vpn_connecting">Connecting&#8230;</string>
    <string name="notification_vpn_connected_title">Connected to %1$s, %2$s</string>
    <string name="notification_vpn_action_disconnect">Disconnect</string>
    <string name="notification_vpn_permission_revoked">VPN permission revoked</string>

    <!-- Home -->
    <string name="home_activity_title">Consumer VPN</string>
    <string name="home_menu_item_log_out">Log out</string>
    <string name="home_menu_item_settings">Settings</string>
    <string name="home_dialog_expired_account_title">Expired account</string>
    <string name="home_dialog_expired_account_message">You account has expired, please renew to be able to connect.</string>
    <string name="home_dialog_expired_account_cancel">Cancel</string>
    <string name="home_dialog_expired_account_retry">Retry</string>

    <!-- Connection Tab -->
    <string name="home_tab_tittle_connection">Connection</string>
    <string name="home_tab_connect_button">Connect</string>
    <string name="home_tab_disconnect_button">Disconnect</string>
    <string name="home_tab_connect_connection_state_connecting">Connecting</string>
    <string name="home_tab_location_selected">Location Selected</string>
    <string name="home_connection_location_best_available">Best Available</string>
    <string name="home_connection_location_best_country_placeholder">Best Available in %s</string>
    <string name="home_connection_location_placeholder">%s, %s</string>
    <string name="home_connection_visible_location">Visible Location</string>
    <string name="home_connection_public_ip">Public IP</string>
    <string name="home_connection_loading">Loading…</string>

    <!-- Servers -->
    <string name="servers_menu_button_title">Locations</string>
    <string name="servers_fragment_label_title">Locations</string>
    <string name="home_dialog_connection_title">Server selection</string>
    <string name="home_dialog_connection_message_city_country">Connect to %s, %s</string>
    <string name="home_dialog_connection_message_fastest_available">Connect to Fastest Available</string>
    <string name="home_dialog_connection_message_fastest_available_country">Connect to Fastest Available in %s</string>
    <string name="home_dialog_connection_cancel">Cancel</string>
    <string name="home_dialog_connection_connect">Connect</string>
    <string name="home_dialog_disconnection_title_country">Connected to %s</string>
    <string name="home_dialog_disconnection_title_city_country">Connected to %s, %s</string>
    <string name="home_dialog_disconnection_message">Would you like to disconnect from the current location?</string>
    <string name="home_dialog_disconnection_cancel">Cancel</string>
    <string name="home_dialog_disconnection_disconnect">Disconnect</string>
    <string name="home_tab_servers_menu_sort">Sort</string>
    <string name="home_tab_servers_menu_search">Search</string>
    <string name="sort_menu_option_by_city">Sort by city</string>
    <string name="sort_menu_option_by_country">Sort by country</string>
    <string name="row_server_city_count_placeholder">%1$d %2$s</string>
    <string name="row_server_city_country_placeholder">, %s</string>
    <string name="row_server_city_text">City</string>
    <string name="row_server_cities_text">Cities</string>
    <plurals name="row_server_cities_number">
        <item quantity="one">%d City</item>
        <item quantity="other">%d Cities</item>
    </plurals>
    <string name="row_server_fastest_test">Fastest Available</string>

    <!--Settings screen-->
    <string name="settings_fragment_label_title">Settings</string>">
    <string name="settings_fragment_connection_option_openvpn">OpenVPN</string>
    <string name="settings_fragment_connection_option_ikev2">IKEv2</string>
    <string name="settings_fragment_connection_option_wireguard">WireGuard®</string>
    <string name="settings_preference_auto_connect_title">Connect at startup</string>
    <string name="settings_preference_vpn_protocol_title">VPN Protocol</string>
    <string name="settings_preference_reconnect_title">Auto Reconnect</string>
    <string name="settings_preference_scramble_title">Scramble</string>
    <string name="settings_preference_scramble_description">Adds obfuscation, allowing it to bypass network traffic sensors which aim to detect usage of a VPN and block it.</string>
    <string name="settings_preference_protocol_title">Protocol</string>
    <string name="settings_preference_port_title">Port</string>
    <string name="settings_preference_about_title">About ConsumerVPN</string>
    <string name="settings_preference_support_title">Contact Support</string>
    <string name="settings_preference_kill_switch_title">Android Kill Switch</string>
    <string name="settings_preference_kill_switch_description">Enable your system to block internet connections when the VPN is not active.</string>
    <string name="settings_preference_startup_do_not">Do not automatically connect</string>
    <string name="settings_preference_startup_last_server">Connect to last connected server</string>
    <string name="settings_preference_startup_fastest">Connect to fastest server</string>
    <string name="settings_preference_startup_fastest_in_country">Connect to fastest server in country</string>
    <string name="settings_fastest_in_country_not_implemented">Fastest in country not implemented yet</string>
    <string name="settings_menu_button_log_out">Log out</string>

    <!-- Log out Dialog-->
    <string name="logout_dialog_label_title">Log out</string>
    <string name="logout_dialog_label_message">Are you sure you want to log out?</string>

    <!-- Settings preferences key -->
    <string name="preference_vpn_protocol_key" translatable="false">preference_vpn_protocol</string>
    <string name="preference_auto_connect_key" translatable="false">preference_auto_connect</string>
    <string name="preference_reconnect_key" translatable="false">preference_reconnect</string>
    <string name="preference_scramble_key" translatable="false">preference_scramble</string>
    <string name="preference_protocol_key" translatable="false">preference_protocol</string>
    <string name="preference_port_key" translatable="false">preference_port</string>
    <string name="preference_about_key" translatable="false">preference_about</string>
    <string name="preference_category_startup_key" translatable="false">preference_category_startup</string>
    <string name="preference_support_key" translatable="false">preference_support</string>
    <string name="preference_kill_switch_key" translatable="false">preference_kill_switch</string>

    <!-- Kill switch dialog -->
    <string name="kill_switch_dialog_label_title">Enable OS kill switch</string>
    <string name="kill_switch_dialog_label_message">
        \u2022 Navigate to your device settings\n\u2022 Select \"Connections\" or \"Network &amp; internet\"
        \n\u2022 Go to \"Advanced\" or \"More connection settings\"
        \n\u2022 Select VPN
        \n\u2022 Tap the cog next to ConsumerVPN\n\u2022 Enable both \"Always-on VPN\" and \"Block connections without VPN\"
    </string>
    <string name="kill_switch_dialog_label_error">Error: Unable to launch. Please open Settings manually.</string>
    <string name="kill_switch_dialog_button_take_me_there">Take me there</string>

    <!-- Contact Support -->
    <string name="support_label_title">Support</string>
    <string name="support_label_scan_code">Please scan this code to visit the support website</string>
    <string name="support_image_content_description_qr">Support Web Site QR Code</string>
    <string name="support_label_need_help">Need some help? We can find a fix.</string>
    <string name="support_label_describe_trouble">Describe the trouble you\'re experiencing so we can lend a hand.</string>
    <string name="support_label_empty_notes_error_message">Please, write a description of your problem.</string>
    <string name="support_label_email_subject">Support ConsumerVPN</string>
    <string name="support_label_email_not_supported_message">Send email is not supported on this device.</string>
    <string name="support_checkbox_diagnosis_message">Include diagnostic and system information</string>
    <string name="support_menu_button_send">Send</string>
    <string name="support_toast_contact_support">Visit %s to contact support</string>

    <string name="support_dialog_label_message">Please contact us through %1$s or send us an e-mail to %2$s.</string>
    <string name="support_dialog_visit_support_website_title">Visit our support website</string>
    <string name="support_dialog_visit_support_website_message">No compatible email clients found, please visit our support site for contact</string>
    <string name="support_dialog_visit_support_website_positive_button">Open support site</string>
    <string name="support_dialog_visit_support_website_negative_button">Cancel</string>

    <!--About screen-->
    <string name="about_activity_title">About</string>
    <string name="about_activity_licenses_button">Open source licenses</string>
    <string name="about_msg_body_wlvpn">Want to build a VPN app like this?\n Contact partners@wlvpn.com</string>
    <string name="about_more_url"><a href="https://wlvpn.com/">More about WLVPN</a></string>
    <string name="about_version_name">v%s</string>
    
</resources>
