<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="@string/preference_category_startup_key"
            android:title="Startup">
        <ListPreference
            android:icon="@drawable/ic_connect_startup"
            android:key="@string/preference_auto_connect_key"
            android:summary="%s"
            android:title="@string/settings_preference_auto_connect_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Connection">
        <ListPreference
            android:icon="@drawable/ic_vpn_protocol"
            android:key="@string/preference_vpn_protocol_key"
            android:summary="%s"
            android:title="@string/settings_preference_vpn_protocol_title" />
        <SwitchPreference
            android:icon="@drawable/ic_auto_connect"
            android:key="@string/preference_reconnect_key"
            android:title="@string/settings_preference_reconnect_title" />
        <SwitchPreference
            android:icon="@drawable/ic_scramble"
            android:key="@string/preference_scramble_key"
            android:summary="@string/settings_preference_scramble_description"
            android:title="@string/settings_preference_scramble_title" />
        <ListPreference
            android:icon="@drawable/ic_protocol"
            android:key="@string/preference_protocol_key"
            android:summary="%s"
            android:title="@string/settings_preference_protocol_title" />
        <ListPreference
            android:icon="@drawable/ic_port"
            android:key="@string/preference_port_key"
            android:summary="%s"
            android:title="@string/settings_preference_port_title" />
        <Preference
            android:icon="@drawable/ic_kill_switch"
            android:key="@string/preference_kill_switch_key"
            android:persistent="false"
            android:summary="@string/settings_preference_kill_switch_description"
            android:title="@string/settings_preference_kill_switch_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="General">
        <Preference
            android:icon="@drawable/ic_contact_24dp"
            android:key="@string/preference_support_key"
            android:title="@string/settings_preference_support_title" />
        <Preference
            android:icon="@drawable/ic_about"
            android:key="@string/preference_about_key"
            android:title="@string/settings_preference_about_title" />
    </PreferenceCategory>

</PreferenceScreen>

