<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_connection"
        android:checked="true"
        android:icon="@drawable/ic_public"
        android:title="@string/home_tab_tittle_connection"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_servers"
        android:checked="false"
        android:icon="@drawable/ic_location"
        android:title="@string/servers_menu_button_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:checked="false"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings_fragment_label_title"
        app:showAsAction="ifRoom" />

</menu>