<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.features.about.AboutActivity">

    <ImageView
            android:src="@drawable/logo_consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_consumer_logo_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_msg_contact"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/content_description_application_banner"/>

    <TextView
            android:text="@string/about_msg_body_wlvpn"
            android:autoLink="email"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txt_msg_contact"
            app:layout_constraintTop_toBottomOf="@+id/img_consumer_logo_top"
            app:layout_constraintBottom_toTopOf="@+id/txt_main_url"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/about_more_url"
            android:gravity="center"
            android:minHeight="@dimen/button_minimum_clickable_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_main_url"
            android:layout_marginBottom="@dimen/spacing_normal"
            app:layout_constraintBottom_toTopOf="@id/txt_version_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            tools:text="v1.00"
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_version_name"
            android:layout_marginBottom="@dimen/spacing_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_licenses_button"
        style="@style/MaterialTextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txt_main_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/about_activity_licenses_button" />

</androidx.constraintlayout.widget.ConstraintLayout>